    [ticket:2410]

  - [bug] column.label(None) now produces an
    anonymous label, instead of returning the
    column object itself, consistent with the behavior
    of label(column, None).  [ticket:2168]

  - [feature] An explicit error is raised when
    a ForeignKeyConstraint() that was
    constructed to refer to multiple remote tables
    is first used. [ticket:2455]

- sqlite
  - [feature] the SQLite date and time types
    have been overhauled to support a more open
    ended format for input and output, using
    name based format strings and regexps.  A
    new argument "microseconds" also provides
    the option to omit the "microseconds"
    portion of timestamps.  Thanks to
    Nathan Wright for the work and tests on
    this.  [ticket:2363]

- mssql
  - [feature] SQL Server dialect can be given
    database-qualified schema names,
    i.e. "schema='mydatabase.dbo'"; reflection
    operations will detect this, split the schema
    among the "." to get the owner separately,
    and emit a "USE mydatabase" statement before
    reflecting targets within the "dbo" owner;
    the existing database returned from
    DB_NAME() is then restored.

  - [bug] removed legacy behavior whereby
    a column comparison to a scalar SELECT via
    == would coerce to an IN with the SQL server
    dialect.  This is implicit
    behavior which fails in other scenarios
    so is removed.  Code which relies on this
    needs to be modified to use column.in_(select)
    explicitly.  [ticket:2277]

  - [feature] updated support for the mxodbc
    driver; mxodbc 3.2.1 is recommended for full
    compatibility.

- postgresql

  - [feature] postgresql.ARRAY features an optional
    "dimension" argument, will assign a specific
    number of dimensions to the array which will
    render in DDL as ARRAY[][]..., also improves
    performance of bind/result processing.
    [ticket:2441]

  - [feature] postgresql.ARRAY now supports
    indexing and slicing.  The Python [] operator