@@ -1,6 +1,0 @@
-.. _access_toplevel:
-
-Microsoft Access
-================
-
-.. automodule:: sqlalchemy.dialects.access.base
