@@ -4,7 +4,7 @@ Dialects
 ========
 
 The **dialect** is the system SQLAlchemy uses to communicate with various types of DBAPIs and databases.
-A compatibility chart of supported backends can be found at :ref:`supported_dbapis`.  The sections that 
+A compatibility chart of supported backends can be found at :ref:`supported_dbapis`.  The sections that
 follow contain reference documentation and notes specific to the usage of each backend, as well as notes
 for the various DBAPIs.
 
@@ -20,7 +20,6 @@ should be consulted to check for current support level.
     firebird
     informix
     maxdb
-    access
     mssql
     mysql
     oracle
