@@ -5,7 +5,6 @@
 # the MIT License: http://www.opensource.org/licenses/mit-license.php
 
 __all__ = (
-#    'access',
     'drizzle',
     'firebird',
 #    'informix',
